--- a/src/Components/TripleComponent/TripleComponent.scss
+++ b/src/Components/TripleComponent/TripleComponent.scss
@@ -22,8 +22,8 @@
                 padding: 8px 16px;
                 border: none;
                 border-radius: 5px;
-                background-color: #333;
-                color: #fff;
+                background-color: white;
+                color: black;
                 cursor: pointer;
             }
         }
@@ -60,7 +60,7 @@
             padding: 8px 16px;
             border: none;
             border-radius: 5px;
-            background-color: #333;
+            background-color: rgb(0, 110, 255);
             color: #fff;
             cursor: pointer;
         }
